--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "description": "Cloning Youtube with Vanilla and NodeJS",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon --exec babel-node index.js delay 2"
   },
   "author": "Seo Ji Hwan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.1",
+    "body-parser": "^1.19.0",
+    "@babel/preset-env": "^7.10.2",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "helmet": "^3.22.0",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
