--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Cloning Youtube with Vanilla and NodeJS",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js delay 2"
+    "dev:server": "nodemon --exec babel-node index.js delay 2",
+    "dev:assets": "set WEBPACK_ENV=development&&webpack -w",
+    "build:assets": "set WEBPACK_ENV=production&&webpack"
   },
   "author": "Seo Ji Hwan",
   "license": "ISC",
@@ -12,12 +14,25 @@
     "@babel/core": "^7.10.2",
     "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
+    "autoprefixer": "^9.8.0",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.22.0",
+    "mongoose": "^5.9.17",
     "morgan": "^1.10.0",
-    "pug": "^3.0.0"
+    "multer": "^1.4.2",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "pug": "^3.0.0",
+    "sass-loader": "^8.0.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
