--- a/package.json
+++ b/package.json
@@ -11,31 +11,27 @@
   "author": "Seo Ji Hwan",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/node": "^7.10.1",
-    "@babel/polyfill": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
+    "@types/body-parser": "^1.19.0",
+    "@types/connect-mongo": "^3.1.3",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.7",
+    "@types/express-session": "^1.17.0",
+    "@types/helmet": "0.0.48",
+    "@types/mongoose": "^5.7.36",
+    "@types/morgan": "^1.9.1",
+    "@types/multer": "^1.4.4",
+    "@types/passport": "^1.0.4",
+    "@types/passport-facebook": "^2.1.10",
+    "@types/passport-github": "^1.1.5",
+    "@types/passport-local": "^1.0.33",
+    "@types/passport-local-mongoose": "^4.0.13",
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
-    "body-parser": "^1.19.0",
-    "connect-mongo": "^3.2.0",
-    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "helmet": "^3.22.0",
-    "mongoose": "^5.9.17",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
     "node-sass": "^4.14.1",
-    "passport": "^0.4.1",
-    "passport-facebook": "^3.0.0",
-    "passport-github": "^1.1.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1",
     "postcss-loader": "^3.0.0",
     "pug": "^3.0.0",
     "sass-loader": "^8.0.2",
