--- a/csr/package.json
+++ b/csr/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "ts-node server/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon --watch server/index.ts --exec ts-node server/index.ts --delay 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/mongoose": "^5.7.36",
+    "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.8"
   }
 }
