--- a/csr/package.json
+++ b/csr/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon --watch server/index.ts --exec ts-node server/index.ts --delay 1"
+    "server": "nodemon --watch server/**/* --exec ts-node server/index.ts --delay 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
+    "@types/morgan": "^1.9.1",
+    "bcrypt": "^5.0.0",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
@@ -19,6 +22,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.8"
+    "mongoose": "^5.10.8",
+    "morgan": "^1.10.0"
   }
 }
