--- a/csr/package.json
+++ b/csr/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon --watch server/**/* --exec ts-node server/index.ts --delay 1"
+    "server": "nodemon --watch server/**/* --exec ts-node server/index.ts "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
     "bcrypt": "^5.0.0",
@@ -20,8 +22,10 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0"
   }
