--- a/csr/.babelrc
+++ b/csr/.babelrc
@@ -1,3 +1,14 @@
 {
-  "presets": ["@babel/env", "@babel/preset-react", "@babel/preset-typescript"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "esmodules": true
+        }
+      }
+    ],
+    "@babel/preset-react",
+    "@babel/preset-typescript"
+  ]
 }
