--- a/csr/package.json
+++ b/csr/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "client": "webpack-dev-server --mode development",
-    "server": "nodemon --watch server/**/* --exec ts-node server/index.ts "
+    "server": "nodemon --watch server/**/* --exec ts-node server/index.ts ",
+    "start": "concurrently \"npm run client\" \"npm run server\""
   },
   "keywords": [],
   "author": "",
@@ -16,16 +17,24 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
+    "antd": "^4.6.6",
     "babel-loader": "^8.1.0",
     "bcrypt": "^5.0.0",
+    "concurrently": "^5.3.0",
     "css-loader": "^4.3.0",
     "html-webpack-plugin": "^4.5.0",
     "nodemon": "^2.0.4",
@@ -38,13 +47,21 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0"
   }
 }
