--- a/csr/package.json
+++ b/csr/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "client": "webpack-dev-server --mode development",
     "server": "nodemon --watch server/**/* --exec ts-node server/index.ts ",
-    "start": "concurrently \"npm run client\" \"npm run server\""
+    "start": "concurrently \"npm run client\" \"npm run server\"",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -33,11 +34,13 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/redux": "^3.6.0",
     "@types/redux-saga": "^0.10.5",
+    "@types/styled-components": "^5.1.4",
     "antd": "^4.6.6",
     "babel-loader": "^8.1.0",
     "bcrypt": "^5.0.0",
     "concurrently": "^5.3.0",
     "css-loader": "^4.3.0",
+    "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "nodemon": "^2.0.4",
     "style-loader": "^1.3.0",
@@ -67,6 +70,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.0",
     "typesafe-actions": "^5.1.0"
   }
 }
