--- a/csr/package.json
+++ b/csr/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client": "webpack-dev-server --mode development",
+    "client": "webpack serve --env development",
     "server": "nodemon --watch server/**/* --exec ts-node server/index.ts ",
     "start": "concurrently \"npm run client\" \"npm run server\"",
     "build": "webpack --mode production"
@@ -14,10 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
@@ -43,12 +44,11 @@
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "nodemon": "^2.0.4",
+    "react-refresh": "^0.9.0",
     "style-loader": "^1.3.0",
     "ts-loader": "^8.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
@@ -71,6 +71,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.0",
-    "typesafe-actions": "^5.1.0"
+    "typesafe-actions": "^5.1.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   }
 }
