--- a/csr/package.json
+++ b/csr/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client": "webpack serve --env development",
+    "client": "webpack serve --mode=development",
     "server": "nodemon --watch server/**/* --exec ts-node server/index.ts ",
     "start": "concurrently \"npm run client\" \"npm run server\"",
     "build": "webpack --mode production"
@@ -15,9 +15,9 @@
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "@babel/preset-typescript": "^7.12.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
@@ -36,6 +36,8 @@
     "@types/redux": "^3.6.0",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.4",
+    "@types/webpack": "^4.41.24",
+    "@types/webpack-dev-server": "^3.11.1",
     "antd": "^4.6.6",
     "babel-loader": "^8.1.0",
     "bcrypt": "^5.0.0",
@@ -62,9 +64,10 @@
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.0",
+    "react-reconciler": "^0.26.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
