--- a/csr/package.json
+++ b/csr/package.json
@@ -36,6 +36,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.4",
+    "@types/uuid": "^8.3.0",
     "@types/webpack": "^4.41.24",
     "@types/webpack-dev-server": "^3.11.1",
     "antd": "^4.6.6",
@@ -75,6 +76,7 @@
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.0",
     "typesafe-actions": "^5.1.0",
+    "uuid": "^8.3.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
