--- a/csr/package.json
+++ b/csr/package.json
@@ -7,7 +7,7 @@
     "client": "webpack serve --mode=development",
     "server": "nodemon --watch server/**/* --exec ts-node server/index.ts ",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
-    "start": "ts-node server/index.ts",
+    "start": "tsc && node/dist/server/index.js",
     "build": "webpack --mode production"
   },
   "keywords": [],
