--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client": "webpack serve --mode=development",
+    "client": "webpack serve --env development",
     "server": "nodemon --watch server/**/* --exec ts-node server/index.ts ",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "start": "tsc && node/dist/server/index.js",
-    "build": "webpack --mode production"
+    "build": "webpack --env production"
   },
   "keywords": [],
   "author": "",
@@ -53,7 +53,8 @@
     "ts-loader": "^8.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.4.0"
   },
   "dependencies": {
     "axios": "^0.20.0",
